Update 5. Network Services (In-progress).md

--- a/TryHackMe/FreeRoadMap/Fundamental Skills/5. Network Services (In-progress).md
+++ b/TryHackMe/FreeRoadMap/Fundamental Skills/5. Network Services (In-progress).md
@@ -49,16 +49,36 @@
 		- ![[cd .ssh followed by ls.png]]
 		- id_rsa
 	- Download this file to your local machine, and change the permissions to "600" using "chmod 600 [file]".
-		- ![[Pasted image 20241223075519.png]]
-		- ![[Pasted image 20241223081504.png]]
+		- ![[Pasted image 20241224075137.png]]
 		- ![[Pasted image 20241223081545.png]]
 
+	- Or
+		-  ![[Pasted image 20241224080747.png]]
 	- Now, use the information you have already gathered to work out the username of the account. Then, use the service and key to log-in to the server.
-		- 
+		-  cactus@polosmb
+		- ![[Pasted image 20241224080804.png]]
+		- ![[Pasted image 20241224080922.png]]
 	- What is the smb.txt flag?
-		- 
-- Task 5:
-- Task 6:
+		- THM{smb_is_fun_eh?}
+- Task 5: Understanding Telnet
+	- What is Telnet?
+		- application protocol
+	- What has slowly replaced Telnet?
+		- ssh
+	- How would you connect to a Telnet server with the IP 10.10.10.3 on port 23?
+		- telnet 10.10.10.3 23
+	- The lack of what, means that all Telnet communication is in plaintext?
+		- encryption
+- Task 6: Enumerating Telnet
+	- How many **ports** are open on the target machine?
+	- What **port** is this?
+	- This port is unassigned, but still lists the **protocol** it's using, what protocol is this?
+	- Now re-run the **nmap** scan, without the **-p-** tag, how many ports show up as open?
+	- Here, we see that by assigning telnet to a **non-standard port**, it is not part of the common ports list, or top 1000 ports, that nmap scans. It's important to try every angle when enumerating, as the information you gather here will inform your exploitation stage.
+	- Based on the title returned to us, what do we think this port could be **used for**?
+	- Who could it belong to? Gathering possible **usernames** is an important step in enumeration.
+	- Always keep a note of information you find during your enumeration stage, so you can refer back to it when you move on to try exploits.
+		- No answer needed
 - Task 7:
 - Task 8:
 - Task 9:
