Update 5. Network Services.md

--- a/TryHackMe/FreeRoadMap/Fundamental Skills/5. Network Services.md
+++ b/TryHackMe/FreeRoadMap/Fundamental Skills/5. Network Services.md
@@ -13,21 +13,17 @@
 		- Unix
 - Task 3: Enumerating SMB 
 	- Conduct an **nmap** scan of your choosing, How many ports are open?
-		- ![[nmap -sS 10.10.22.206.png]]
-	- Used nmap -sS (SYN Scan) on 10.10.22.206 for a quick, stealthy, and accurate scan. 
+	  	- Used nmap -sS T4 10.10.22.206 for a quick, stealthy, and accurate scan. 
 		- 3
 	- What ports is **SMB** running on?
 		- 139/445
 	- Let's get started with Enum4Linux, conduct a full basic enumeration. For starters, what is the **workgroup** name?
-		- ![[enum4linux -a 10.10.22.206.png]]
-		- ![[enum4linux output 1.png]]
 		- WORKGROUP
 	- What comes up as the **name** of the machine?
 		- POLOSMB
 	- What operating system **version** is running?
 		- 6.1
 	- What share sticks out as something we might want to investigate?
-		- ![[enum4linux output 2.png]]
 		- profiles
 - Task 4: Exploiting SMB
 	- What would be the correct syntax to access an SMB share called "secret" as user "suit" on a machine with the IP 10.10.10.2 on the default port?
@@ -35,19 +31,14 @@
 	- Great! Now you've got a hang of the syntax, let's have a go at trying to exploit this vulnerability. You have a list of users, the name of the share (smb) and a suspected vulnerability.
 		- No answer needed
 	- Does the share allow anonymous access? Y/N?
-		-  ![[Pasted image 20241222084214.png]]
 		- Y
 	- Great! Have a look around for any interesting documents that could contain valuable information. Who can we assume this profile folder belongs to?
-		- ![[Pasted image 20241222084340.png]]
-		- ![[Pasted image 20241223074527.png]]
-		- ![[Pasted image 20241223075029.png]]
 		- John Cactus
 	- What service has been configured to allow him to work from home?
 		- ssh
 	- Okay! Now we know this, what directory on the share should we look in?
 		- .ssh
 	- This directory contains authentication keys that allow a user to authenticate themselves on, and then access, a server. Which of these keys is most useful to us?
-		- ![[cd .ssh followed by ls.png]]
 		- id_rsa
 	- Download this file to your local machine, and change the permissions to "600" using "chmod 600 [file]".
 		- ![[Pasted image 20241224075137.png]]
